RESOLVED FIXED42186
Failing 2d.path.arcTo.ensuresubpath.* philip canvas tests
https://bugs.webkit.org/show_bug.cgi?id=42186
Summary Failing 2d.path.arcTo.ensuresubpath.* philip canvas tests
Matthew Delaney
Reported 2010-07-13 13:22:24 PDT
2d.path.arcTo.ensuresubpath.2
Attachments
Proposed patch (3.85 KB, patch)
2010-07-16 20:54 PDT, Andreas Kling
no flags
Proposed patch v2 (3.86 KB, patch)
2010-07-16 21:09 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2010-07-16 20:48:38 PDT
2d.path.arcTo.ensuresubpath.1 is also skipped on Mac.
Andreas Kling
Comment 2 2010-07-16 20:54:44 PDT
Created attachment 61872 [details] Proposed patch
Andreas Kling
Comment 3 2010-07-16 21:09:22 PDT
Created attachment 61873 [details] Proposed patch v2 Missed the fact that Path::isEmpty() and !Path::hasCurrentPoint() mean different things.
Sam Weinig
Comment 4 2010-07-16 21:25:28 PDT
(In reply to comment #3) > Created an attachment (id=61873) [details] > Proposed patch v2 > > Missed the fact that Path::isEmpty() and !Path::hasCurrentPoint() mean different things. In the CG code path at least, Path::isEmpty() == !Path::hasCurrentPoint() I think. On what platforms do these differ and how?
Andreas Kling
Comment 5 2010-07-16 21:35:22 PDT
From Path.h: // Gets the current point of the current path, which is conceptually the final point reached by the path so far. // Note the Path can be empty (isEmpty() == true) and still have a current point. Most Path implementations have Path::isEmpty() == !Path::hasCurrentPoint(), only Skia and OpenVG differ. PathSkia.cpp: ============= bool Path::isEmpty() const { return m_path->isEmpty(); } bool Path::hasCurrentPoint() const { return m_path->getPoints(NULL, 0) != 0; } PathOpenVG.cpp: =============== bool Path::isEmpty() const { m_path->makeCompatibleContextCurrent(); return !vgGetParameteri(m_path->vgPath(), VG_PATH_NUM_SEGMENTS); } bool Path::hasCurrentPoint() const { m_path->makeCompatibleContextCurrent(); return vgGetParameteri(m_path->vgPath(), VG_PATH_NUM_SEGMENTS) > 0; }
WebKit Commit Bot
Comment 6 2010-07-16 21:53:59 PDT
Comment on attachment 61873 [details] Proposed patch v2 Clearing flags on attachment: 61873 Committed r63607: <http://trac.webkit.org/changeset/63607>
WebKit Commit Bot
Comment 7 2010-07-16 21:54:03 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.