2010-07-16  Andreas Kling  <andreas.kling@nokia.com>

Reviewed by Sam Weinig.

        Failing 2d.path.arcTo.ensuresubpath.* philip canvas tests
        https://bugs.webkit.org/show_bug.cgi?id=42186

        Unskip tests:
        - canvas/philip/tests/2d.path.arcTo.ensuresubpath.1.html
        - canvas/philip/tests/2d.path.arcTo.ensuresubpath.2.html

        * platform/mac/Skipped:
2010-07-16  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Sam Weinig.

        Failing 2d.path.arcTo.ensuresubpath.* philip canvas tests
        https://bugs.webkit.org/show_bug.cgi?id=42186

        Move code from Qt's Path::addArcTo() up to CanvasRenderingContext2D.

        * html/canvas/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::arcTo): Behave as moveTo(x1,y1)
        if the current path is empty.
        * platform/graphics/qt/PathQt.cpp:
        (WebCore::Path::addArcTo): Remove now-redundant code.

Canonical link: https://commits.webkit.org/54447@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63607 268f45cc-cd09-0410-ab3c-d52691b4dbfc